--- a/project/front/public/index.html
+++ b/project/front/public/index.html
@@ -28,6 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <!-- 팝업 영역 -->
+    <div id="backdrop-root"></div>
+    <div id="modal-root"></div>
+
+    <!-- Root -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
