--- a/project/front/public/index.html
+++ b/project/front/public/index.html
@@ -32,6 +32,7 @@
     <!-- 팝업 영역 -->
     <div id="backdrop-root"></div>
     <div id="modal-root"></div>
+    <div id="alert-root"></div>
 
     <!-- Root -->
     <div id="root"></div>
