--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
             background-color: rgb(61, 61, 61);
             margin-bottom: 10px;
             height: 300px;
+            background: #fff;
             opacity: 0;
             transform: translateY(40px);
         }
